# Clever-note

./: CMakeLists.txt
common/: CMakeLists.txt
common/compress/: CMakeLists.txt
common/compress/inc/: compress.h  compress_file.h  uncompress.h
common/compress/src/: compress.cpp  compress_file.cpp  uncompress.cpp
common/compress/test/: CMakeLists.txt  zlib.cpp  zlib_out.cpp
common/core/: CMakeLists.txt
common/core/inc/: constant.h  core.h  exception.h  log.h
common/core/inc/xml/: xml_handle.h  xml_mapper.h  xml_parser.h
common/core/test/: xml_parser.cpp
common/i18n/: CMakeLists.txt
common/i18n/inc/: i18n.h
common/i18n/src/: i18n.cpp
common/locale/: CMakeLists.txt
common/logger/: CMakeLists.txt
common/logger/inc/: log.h  log_adapter.h  log_config.h  log_console_adapter.h  log_context.h  log_file_adapter.h  log_level.h  log_message.h  log_nop_adapter.h  logger.h  logger_factory.h
common/logger/src/: log.cpp  log_config.cpp  log_console_adapter.cpp  log_context.cpp  log_file_adapter.cpp  logger.cpp  logger_factory.cpp
common/logger/test/: CMakeLists.txt  log.cpp  logger_factory.cpp
common/plugin/: CMakeLists.txt
common/plugin/inc/: plugin.h  plugin_factory.h  plugin_func_symbol.h  plugin_function.h  plugin_manager.h  plugin_meta.h
common/plugin/src/: plugin.cpp  plugin_factory.cpp
common/plugin/test/: CMakeLists.txt  library_load.cpp  plugin_factory.cpp
common/theme/: CMakeLists.txt
common/zip/: CMakeLists.txt
common/zlib/test/: zlib.cpp  zlib_out.cpp
desktop/: CMakeLists.txt
desktop/editor/: CMakeLists.txt
desktop/editor/inc/: editor.h
desktop/main/: CMakeLists.txt
desktop/main/inc/: mainwindow.h
desktop/richtext/: CMakeLists.txt
desktop/richtext/inc/: richtext.h
desktop/starter/: CMakeLists.txt
desktop/theme/: CMakeLists.txt
lib/: .gitignore
lib/zlib-1.2.11/: CMakeLists.txt
mobile/: CMakeLists.txt  README.md
(+20 files in other folders)
