list_include_file(INC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/inc")
list_source_file(SRC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src")
add_library(zip SHARED ${INC_FILE_LIST} ${SRC_FILE_LIST})
target_link_libraries(zip PUBLIC core zlib)
target_include_directories(zip PRIVATE ${NOTE_LIB_PATH}/zlib-1.2.11)
add_subdirectory(test)
